--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "strict": true
+        "strict": true,
+        "strictNullChecks": true
     },
 
     "files": [
