--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es6",
         "strict": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "sourceMap": true
     },
 
     "files": [
